--- a/shop/src/main/resources/application.properties
+++ b/shop/src/main/resources/application.properties
@@ -6,5 +6,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.flyway.locations=filesystem:shop/src/main/resources/db/migration
 spring.flyway.enabled=true
-
+spring.jpa.hibernate.ddl-auto = validate
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
