--- a/shop/src/main/resources/application.properties
+++ b/shop/src/main/resources/application.properties
@@ -9,4 +9,5 @@ spring.flyway.enabled=true
 spring.jpa.hibernate.ddl-auto = validate
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+strategy = ABUNDANT
 
